--- a/src/style.css
+++ b/src/style.css
@@ -14,7 +14,7 @@
   align-items: flex-end;
   padding: 0 36px;
   perspective: 2500px;
-  margin: 0 50px;
+  /* margin: 0 50px; */
   border-radius: 5px;
 }
 .cover-image{
@@ -26,7 +26,7 @@
 .wrapper{
   transition: all 0.5s;
   position: absolute;
-  width: 100%;
+  /* width: 100%; */
   z-index: -1;
   border-radius: 5px;
 }
@@ -94,4 +94,26 @@
 .card:hover .character {
   opacity: 1;
   transform: translate3d(0%, -30%, 50px);
+}
+
+/* Mobile View: Reduce shadow and hover effect */
+@media (max-width: 640px) {
+  .wrapper {
+    box-shadow: 1px 5px 10px rgba(0, 0, 0, 0.2); /* Lighter shadow */
+  }
+  .card:hover .wrapper {
+    transform: perspective(700px) translateY(-3%) rotateX(15deg);
+    box-shadow: 1px 20px 18px -6px rgba(0, 0, 0, 0.5);
+  }
+}
+
+/* Larger Screens: More depth in shadow */
+@media (min-width: 1024px) {
+  .wrapper {
+    box-shadow: 3px 20px 25px rgba(0, 0, 0, 0.4);
+  }
+  .card:hover .wrapper {
+    transform: perspective(1200px) translateY(-7%) rotateX(30deg);
+    box-shadow: 3px 40px 35px -10px rgba(0, 0, 0, 0.8);
+  }
 }
