--- a/src/style.css
+++ b/src/style.css
@@ -48,7 +48,7 @@
   left: 0;
   border-radius: 5px;
 }
-.wrapper::before{
+/* .wrapper::before{
   top: 0;
   height: 100%;
   background-image: linear-gradient(
@@ -58,8 +58,8 @@
       rgba(12, 13, 19) 97%
   );
   border-radius: 5px;
-}
-.wrapper::after{
+} */
+/* .wrapper::after{
   bottom: 0;
   opacity: 1;
   background-image: linear-gradient(
@@ -69,7 +69,7 @@
       rgba(12, 13, 19)97%
   );
   border-radius: 5px;
-}
+} */
 .card:hover .wrapper::before,
 .wrapper::after{
   opacity: 1;
@@ -97,18 +97,18 @@
 }
 
 /* Mobile View: Reduce shadow and hover effect */
-@media (max-width: 640px) {
+/* @media (max-width: 640px) {
   .wrapper {
-    box-shadow: 1px 5px 10px rgba(0, 0, 0, 0.2); /* Lighter shadow */
+    box-shadow: 1px 5px 10px rgba(0, 0, 0, 0.2); 
   }
   .card:hover .wrapper {
     transform: perspective(700px) translateY(-3%) rotateX(15deg);
     box-shadow: 1px 20px 18px -6px rgba(0, 0, 0, 0.5);
   }
-}
+} */
 
 /* Larger Screens: More depth in shadow */
-@media (min-width: 1024px) {
+/* @media (min-width: 1024px) {
   .wrapper {
     box-shadow: 3px 20px 25px rgba(0, 0, 0, 0.4);
   }
@@ -116,4 +116,4 @@
     transform: perspective(1200px) translateY(-7%) rotateX(30deg);
     box-shadow: 3px 40px 35px -10px rgba(0, 0, 0, 0.8);
   }
-}
+} */
