--- a/src/style.css
+++ b/src/style.css
@@ -94,20 +94,19 @@
   position: absolute;
   z-index: -1;
 }
-.card:hover .character {
-  opacity: 1;
-  transform: translate3d(0%, -30%, 40px);
+.card:hover .title {
   box-shadow: 0px 35px 10px -8px rgba(0, 0, 0, 0.50);
   -moz-box-shadow:0px 35px 10px -8px rgba(0, 0, 0, 0.75);
   -webkit-box-shadow:0px 35px 10px -8px rgba(0, 0, 0, 0.75);
 }
+.card:hover .character{
+  opacity: 1;
+  transform: translate3d(0%, -30%, 50px);
+}
 
 /* Mobile View: Reduce shadow and hover effect */
-/* @media (max-width: 640px) {
-  .wrapper {
-    box-shadow: 1px 5px 10px rgba(0, 0, 0, 0.2); 
-  }
-  .card:hover .wrapper {
+ /* @media (max-width: 640px) {
+  .card:hover .character {
     transform: perspective(700px) translateY(-3%) rotateX(15deg);
     box-shadow: 1px 20px 18px -6px rgba(0, 0, 0, 0.5);
   }
@@ -115,10 +114,7 @@
 
 /* Larger Screens: More depth in shadow */
 /* @media (min-width: 1024px) {
-  .wrapper {
-    box-shadow: 3px 20px 25px rgba(0, 0, 0, 0.4);
-  }
-  .card:hover .wrapper {
+  .card:hover .character {
     transform: perspective(1200px) translateY(-7%) rotateX(30deg);
     box-shadow: 3px 40px 35px -10px rgba(0, 0, 0, 0.8);
   }
