--- a/src/style.css
+++ b/src/style.css
@@ -103,6 +103,23 @@
   opacity: 1;
   transform: translate3d(0%, -30%, 50px);
 }
+/* Mobile hover activated by class */
+.card.mobile-hover .wrapper {
+  transform: perspective(900px) translateY(-5%) rotateX(25deg) translateZ(0);
+  border-radius: 5px;
+}
+
+.card.mobile-hover .title {
+  transform: translate3d(0%, -50px, 100px);
+  box-shadow: 0px 35px 10px -8px rgba(0, 0, 0, 0.50);
+  -moz-box-shadow: 0px 35px 10px -8px rgba(0, 0, 0, 0.75);
+  -webkit-box-shadow: 0px 35px 10px -8px rgba(0, 0, 0, 0.75);
+}
+
+.card.mobile-hover .character {
+  opacity: 1;
+  transform: translate3d(0%, -30%, 50px);
+}
 
 /* Mobile View: Reduce shadow and hover effect */
  /* @media (max-width: 640px) {
